fix card content on mobile

--- a/src/scss/components/_content-card.scss
+++ b/src/scss/components/_content-card.scss
@@ -73,6 +73,10 @@
 
     @media #{$screen-mobile} {
       text-align: center;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     &-text {
